--- a/admin/composer.json
+++ b/admin/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "blade-ui-kit/blade-icons": "^1.5",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "ryangjchandler/filament-profile": "^0.3.0",
         "spatie/laravel-stripe-webhooks": "^3.2"
     },
     "require-dev": {
